Demo: Possible fix to Safari not applying overflow:hidden to body (Social scrolling)

--- a/src/style/demo/DemoPlayer.less
+++ b/src/style/demo/DemoPlayer.less
@@ -180,7 +180,7 @@
 }
 
 .fake-feed {
-	background-color: pink;
+	background-color: black;
 }
 
 // Off-set ad to slide it in when mounted.
